...
    "empty_search" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nothing found"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ничего не найдено"
...
